--- a/exercises/introducao-a-html-e-css_4/style.css
+++ b/exercises/introducao-a-html-e-css_4/style.css
@@ -1,4 +1,51 @@
+body {
+  background-color: rgb(2, 116, 91);
+  font-size: 14px;
+  text-align: center;
+  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0 auto;
+  width: 800px;
+  color: white;
+}
+
+nav {
+  background-color: rgb(2, 116, 91);
+  text-decoration-color: white;
+  font-size: 14px;
+  text-align: center;
+  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1, h2, h3 {
+  padding: 20px;
+  background-color: rgb(3, 161, 127);
+}
+
 li {
     list-style: none;
     display: inline-block;
+}
+
+th, td {
+    padding: 15px;
+  }
+
+table, th, td {
+  text-align: center;
+  border: 1px solid black;
+  border-collapse: collapse;
+  border-color: white;
+  margin-left: auto;
+  margin-right: auto;
+} 
+
+a {
+  text-decoration: none;
+}
+
+footer{
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding: 20px;
+  background-color: rgb(3, 161, 127);
 }
